--- a/dapp/styles/globals.css
+++ b/dapp/styles/globals.css
@@ -70,7 +70,7 @@ a {
   --attack-step: 15;
   --attack-position: -4500px;
   --attack2-step: 9;
-  --attack2-position: -2700;
+  --attack2-position: -2700px;
   --move-step: 6;
   --move-position: -1800px;
 }
@@ -79,7 +79,7 @@ a {
   --attack-step: 17;
   --attack-position: -5100px;
   --attack2-step: 17;
-  --attack2-position: -5100;
+  --attack2-position: -5100px;
   --move-step: 6;
   --move-position: -1800px;
 }
@@ -88,7 +88,7 @@ a {
   --attack-step: 9;
   --attack-position: -2700px;
   --attack2-step: 14;
-  --attack2-position: -4200;
+  --attack2-position: -4200px;
   --move-step: 4;
   --move-position: -1200px;
 }
@@ -97,7 +97,7 @@ a {
   --attack-step: 15;
   --attack-position: -4500px;
   --attack2-step: 29;
-  --attack2-position: -8700;
+  --attack2-position: -8700px;
   --move-step: 6;
   --move-position: -1800px;
 }
@@ -106,7 +106,7 @@ a {
   --attack-step: 9;
   --attack-position: -2700px;
   --attack2-step: 33;
-  --attack2-position: -9900;
+  --attack2-position: -9900px;
   --move-step: 4;
   --move-position: -1200px;
 }
@@ -115,7 +115,7 @@ a {
   --attack-step: 13;
   --attack-position: -3900px;
   --attack2-step: 15;
-  --attack2-position: -4500;
+  --attack2-position: -4500px;
   --move-step: 5;
   --move-position: -1500px;
 }
@@ -124,7 +124,7 @@ a {
   --attack-step: 7;
   --attack-position: -2100px;
   --attack2-step: 7;
-  --attack2-position: -2100;
+  --attack2-position: -2100px;
   --move-step: 5;
   --move-position: -1500px;
 }
@@ -133,7 +133,7 @@ a {
   --attack-step: 12;
   --attack-position: -3600px;
   --attack2-step: 14;
-  --attack2-position: -4200;
+  --attack2-position: -4200px;
   --move-step: 5;
   --move-position: -1500px;
 }
@@ -142,7 +142,7 @@ a {
   --attack-step: 10;
   --attack-position: -3000px;
   --attack2-step: 10;
-  --attack2-position: -3000;
+  --attack2-position: -3000px;
   --move-step: 5;
   --move-position: -1500px;
 }
@@ -151,7 +151,7 @@ a {
   --attack-step: 20;
   --attack-position: -6000px;
   --attack2-step: 14;
-  --attack2-position: -4200;
+  --attack2-position: -4200px;
   --move-step: 5;
   --move-position: -1500px;
 }
@@ -160,7 +160,7 @@ a {
   --attack-step: 6;
   --attack-position: -1800px;
   --attack2-step: 20;
-  --attack2-position: -6000;
+  --attack2-position: -6000px;
   --move-step: 8;
   --move-position: -2400px;
 }
@@ -169,7 +169,7 @@ a {
   --attack-step: 24;
   --attack-position: -7200px;
   --attack2-step: 71;
-  --attack2-position: -21300;
+  --attack2-position: -21300px;
   --move-step: 4;
   --move-position: -1200px;
 }
@@ -178,7 +178,7 @@ a {
   --attack-step: 13;
   --attack-position: -3900px;
   --attack2-step: 26;
-  --attack2-position: -7800;
+  --attack2-position: -7800px;
   --move-step: 6;
   --move-position: -1800px;
 }
@@ -187,7 +187,7 @@ a {
   --attack-step: 6;
   --attack-position: -1800px;
   --attack2-step: 11;
-  --attack2-position: -3300;
+  --attack2-position: -3300px;
   --move-step: 6;
   --move-position: -1800px;
 }
@@ -196,7 +196,7 @@ a {
   --attack-step: 12;
   --attack-position: -3600px;
   --attack2-step: 24;
-  --attack2-position: -7200;
+  --attack2-position: -7200px;
   --move-step: 6;
   --move-position: -1800px;
 }
@@ -205,7 +205,7 @@ a {
   --attack-step: 7;
   --attack-position: -2100px;
   --attack2-step: 16;
-  --attack2-position: -4800;
+  --attack2-position: -4800px;
   --move-step: 5;
   --move-position: -1500px;
 }
