--- a/dapp/styles/globals.css
+++ b/dapp/styles/globals.css
@@ -211,11 +211,11 @@ a {
 }
 
 .attack {
-  animation: attackAnim 1s steps(var(--attack-step)) 1;
+  animation: attackAnim 2s steps(var(--attack2-step)) infinite;
 }
 
 @keyframes attackAnim {
-  to { background-position: var(--attack-position); }
+  to { background-position: var(--attack2-position); }
 }
 
 .move {
