--- a/dapp/styles/globals.css
+++ b/dapp/styles/globals.css
@@ -34,6 +34,16 @@ p {
   text-align: center;
 }
 
+.text-fight-game {
+  position: absolute;
+  font-family: PixcelFont;
+  top: 25%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: white;
+  text-align: center;
+}
+
 .custom-input {
   font-family: PixcelFont;
   font-weight: 900;
