start game page

--- a/dapp/styles/globals.css
+++ b/dapp/styles/globals.css
@@ -9,6 +9,10 @@ body {
   font-family: PixcelFont;
 }
 
+div {
+  font-family: PixcelFont;
+}
+
 @font-face {
   font-family: PixcelFont;
   src: url('./../public/PressStart2P-Regular.ttf') format('truetype');
