--- a/dapp/styles/globals.css
+++ b/dapp/styles/globals.css
@@ -255,6 +255,19 @@ a {
   to { background-position: var(--move-position); }
 }
 
+.effect {
+  /* animation: effectAnim 1s steps(12) infinite;
+  backgroundImage: `url(./effect.png)`,
+  width: "75px",
+  height: "100px" */
+  -webkit-filter:  drop-shadow(-27px 10px 2px rgba(49, 79, 156, 0.5)) drop-shadow(27px 9px 2px rgba(49, 79, 156, 0.5));
+  filter: drop-shadow(-27px 10px 2px rgba(49, 79, 156, 0.5)) drop-shadow(27px 9px 2px rgba(49, 79, 156, 0.5));
+}
+
+@keyframes effectAnim {
+  to { background-position: -900px; }
+}
+
 .opponentCharacter {
   transform: rotateY(180deg);
 }
