--- a/dapp/styles/globals.css
+++ b/dapp/styles/globals.css
@@ -269,7 +269,7 @@ a {
   width: "75px",
   height: "100px" */
   -webkit-filter:  drop-shadow(-8px 5px 2px rgba(49, 79, 156, 0.5)) drop-shadow(27px 9px 2px rgba(49, 79, 156, 0.5));
-  filter: drop-shadow(-13px 2px 12px rgba(239, 204, 6, 0.832)) drop-shadow(13px 2px 2px rgba(116, 205, 14, 0.5));
+  filter: drop-shadow(-13px 2px 12px rgba(206, 202, 202, 0.832)) drop-shadow(13px 2px 2px rgba(199, 202, 195, 0.5));
 }
 
 @keyframes effectAnim {
@@ -303,4 +303,42 @@ a {
 
 .modal button {
   margin-top: 10px;
+}
+
+.float-container {
+  position: relative;
+  display: inline-block;
+}
+
+.slotContainer:hover .float-container .float {
+  opacity: 1;
+}
+
+.fix_float {
+  z-index: 300;
+  width: 200px;
+  border-radius: 8%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(30%, -50%);
+  background-color: rgba(71, 66, 66, 0.5);
+  color: #fff;
+  padding: 10px;
+  transition: opacity 0.3s ease;
+}
+
+.float {
+  z-index: 300;
+  width: 200px;
+  border-radius: 8%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(30%, -50%);
+  background-color: rgba(71, 66, 66, 0.5);
+  color: #fff;
+  padding: 10px;
+  opacity: 0;
+  transition: opacity 0.3s ease;
 }
