--- a/dapp/styles/globals.css
+++ b/dapp/styles/globals.css
@@ -319,10 +319,10 @@ a {
   z-index: 300;
   padding: 5px;
   border-radius: 8%;
-  position: absolute;
+  position: relative;
   top: 50%;
-  left: 50%;
-  transform: translate(93%, -41%);
+  left: 70px;
+  /* transform: translate(93%, -41%); */
   background-color: rgba(71, 66, 66, 0.5);
   color: #fff;
   padding: 10px;
