--- a/dapp/styles/globals.css
+++ b/dapp/styles/globals.css
@@ -365,6 +365,22 @@ a {
   opacity: 0;
 }
 
+.skill_animation {
+  position: relative;
+  border: 2px solid black;
+  background-color: black;
+  opacity: 0.7;
+}
+
+.skill-text {
+  position: relative;
+  color:rgb(255, 255, 255);
+  bottom: 20;
+  border: black 1px;
+  /* animation: move-up 2s ease-in-out; */
+  opacity: 1;
+}
+
 @keyframes move-up {
   0% {
     transform: translateY(0);
