--- a/dapp/styles/globals.css
+++ b/dapp/styles/globals.css
@@ -11,7 +11,7 @@ body {
   font-size: 1vw;
   width: 100vw;
   height: 100vh;
-  background-color: gray;
+  background-color: black;
 }
 
 .chakra-ui-light {
