--- a/dapp/styles/globals.css
+++ b/dapp/styles/globals.css
@@ -1,6 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import "swiper/css";
+@import "swiper/css/navigation";
+@import "swiper/css/effect-cards";
 
 html,
 body {
@@ -12,6 +15,15 @@ body {
   width: 100vw;
   height: 100vh;
   background-color: black;
+  --swiper-navigation-size: 16px;
+  --swiper-navigation-top-offset: 50%;
+  --swiper-navigation-sides-offset: 0px;
+  --swiper-navigation-color: white;
+}
+
+.swiper-button-prev,
+.swiper-button-next {
+  font-weight: bolder;
 }
 
 .chakra-ui-light {
@@ -31,7 +43,7 @@ div {
 
 @font-face {
   font-family: PixcelFont;
-  src: url('./../public/PressStart2P-Regular.ttf') format('truetype');
+  src: url("./../public/PressStart2P-Regular.ttf") format("truetype");
 }
 
 button {
@@ -260,7 +272,9 @@ a {
 }
 
 @keyframes attackAnim {
-  to { background-position: var(--attack-position); }
+  to {
+    background-position: var(--attack-position);
+  }
 }
 
 .attack2 {
@@ -268,7 +282,9 @@ a {
 }
 
 @keyframes attackAnim2 {
-  to { background-position: var(--attack2-position); }
+  to {
+    background-position: var(--attack2-position);
+  }
 }
 
 .move {
@@ -276,7 +292,9 @@ a {
 }
 
 @keyframes moveAnim {
-  to { background-position: var(--move-position); }
+  to {
+    background-position: var(--move-position);
+  }
 }
 
 .effect {
@@ -284,19 +302,21 @@ a {
   backgroundImage: `url(./effect.png)`,
   width: "75px",
   height: "100px" */
-  -webkit-filter:  drop-shadow(-8px 5px 2px rgba(237, 63, 24, 0.5)) drop-shadow(27px 9px 2px rgba(156, 53, 49, 0.5));
+  -webkit-filter: drop-shadow(-8px 5px 2px rgba(237, 63, 24, 0.5)) drop-shadow(27px 9px 2px rgba(156, 53, 49, 0.5));
   filter: drop-shadow(-13px 2px 12px rgba(238, 112, 2, 0.832)) drop-shadow(13px 2px 2px rgba(250, 209, 206, 0.5));
-  transform: scale(1.5)
+  transform: scale(1.5);
 }
 
 .enemy_effect {
-  -webkit-filter:  drop-shadow(-8px 5px 2px rgba(237, 63, 24, 0.5)) drop-shadow(27px 9px 2px rgba(156, 53, 49, 0.5));
+  -webkit-filter: drop-shadow(-8px 5px 2px rgba(237, 63, 24, 0.5)) drop-shadow(27px 9px 2px rgba(156, 53, 49, 0.5));
   filter: drop-shadow(-13px 2px 12px rgba(238, 112, 2, 0.832)) drop-shadow(13px 2px 2px rgba(250, 209, 206, 0.5));
-  transform: scale(1.5)  rotateY(180deg)
+  transform: scale(1.5) rotateY(180deg);
 }
 
 @keyframes effectAnim {
-  to { background-position: -900px; }
+  to {
+    background-position: -900px;
+  }
 }
 
 .opponentCharacter {
@@ -356,7 +376,8 @@ a {
   margin-bottom: 20px;
 }
 
-.shop-slot-container:hover .float-container, .shop-slot-container:hover .buy-button {
+.shop-slot-container:hover .float-container,
+.shop-slot-container:hover .buy-button {
   display: block;
 }
 
@@ -400,7 +421,7 @@ a {
 
 .moving-text {
   position: relative;
-  color:white;
+  color: white;
   bottom: 0;
   animation: move-up 1s ease-in-out;
   opacity: 0;
@@ -415,7 +436,7 @@ a {
 
 .skill-text {
   position: relative;
-  color:rgb(255, 255, 255);
+  color: rgb(255, 255, 255);
   bottom: 20;
   border: black 1px;
   /* animation: move-up 2s ease-in-out; */
