--- a/dapp/styles/globals.css
+++ b/dapp/styles/globals.css
@@ -11,7 +11,7 @@ body {
   margin: 0;
   font-family: PixcelFont;
   overflow: hidden;
-  font-size: 1vw;
+  font-size: 12px;
   width: 100vw;
   height: 100vh;
   background-color: black;
