--- a/landing-page/src/styles/globals.css
+++ b/landing-page/src/styles/globals.css
@@ -44,6 +44,15 @@ h2 {
   filter: drop-shadow(0 25px 25px rgb(0 0 0 / 0.15));  
 }
 
+h3 {
+  background: -webkit-linear-gradient(#181e58de, hsl(211.85deg 100% 9.21%));
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  font-weight: 500;
+  font-size: calc(4vw);
+  filter: drop-shadow(0 25px 25px rgb(0 0 0 / 0.15));  
+}
+
 a {
   text-decoration: underline;
   cursor: pointer;
