--- a/landing-page/src/styles/globals.css
+++ b/landing-page/src/styles/globals.css
@@ -81,6 +81,13 @@ a {
   border: 1px solid rgba(255, 255, 255, 1);
 }
 
+.blackglass {
+  background: rgba(24, 24, 24, 1);
+  border-radius: 32px;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(3.2px);
+}
+
 button {
   color: white  ;
   font-weight: 600;
