多语言修改 jayon

--- a/dapp/styles/globals.css
+++ b/dapp/styles/globals.css
@@ -498,6 +498,7 @@ a {
   align-items: center;
   border-radius: 5px;
   overflow: hidden;
+  cursor: pointer;
 }
 .changeLang .changeLang-btn{
   padding: 0 20px;
